--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -63,10 +63,10 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}/../dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}/../DAGs:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/../Data:/Data
-    - ${AIRFLOW_PROJ_DIR:-.}/../docker/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR:-.}/../docker/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/../Docker/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-.}/../Docker/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -238,9 +238,9 @@ services:
           echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
           echo
         fi
-        mkdir -p /sources/../docker/logs /sources/../dags /sources/../docker/plugins /sources/../Data
-        chown -R "${AIRFLOW_UID}:0" /sources/../docker/{logs,plugins}
-        chown -R "${AIRFLOW_UID}:0" /sources/../{dags,Data}
+        mkdir -p /sources/../Docker/logs /sources/../DAGs /sources/../Docker/plugins /sources/../Data
+        chown -R "${AIRFLOW_UID}:0" /sources/../Docker/{logs,plugins}
+        chown -R "${AIRFLOW_UID}:0" /sources/../{DAGs,Data}
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     environment:
